# jjd-chat-ai

./: README.md  logging_config.yaml  pyproject.toml  requirements.txt  setup.py
app/jjd-chat-ai/com/machinelearning/apps/useful/jjdchatai/services/: posts_loader.py
app/jjd_chat_ai/com/machinelearning/apps/useful/jjdchatai/services/: posts_loader.py
app/tests/com/machinelearning/apps/useful/jjdchatai/services/: test_posts_loader.py
app/tests/resources/: test-posts.csv
jjd_chat_ai_app/: pyproject.toml  requirements.txt
jjd_chat_ai_app/app/com/machinelearning/apps/useful/jjdchatai/services/: assemble_llm_data.py  conversational_chat.py  posts_loader.py  vector_store_service.py
jjd_chat_ai_app/app/tests/com/machinelearning/apps/useful/jjdchatai/services/: test_posts_loader.py
jjd_chat_ai_app/tests/com/machinelearning/apps/useful/jjdchatai/services/: test_posts_loader.py  test_vector_store_service.py
jjd_chat_ai_web/: pyproject.toml  requirements.txt
jjd_chat_ai_web/web/com/machinelearning/apps/useful/jjdchatai/web/: web_app.py
web/jjd_chat_ai_web/com/machinelearning/apps/useful/jjdchatai/web/: web_app.py
web/jjd_chat_ai_web/resources/: Wpisy-Export-2025-January-02-2137.csv
